--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Highway-17 Interactive</title>
 </head>
+
 <body>
-    Under construction.
+    <h1>Highway-17 Interactive</h1>
+    <p>Under construction...</p>
+    <img src="https://github.com/H17I/.github/blob/main/H17IBanner.jpg?raw=true" width="500"> <img src="https://github.com/H17I/.github/blob/main/H17IIcon.png?raw=true" width="250">
 </body>
+
 </html>
